<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.company.pppp.Main2Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/txt_view_new_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/category"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5" />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="65dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_new_photos"/>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/photos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_background"
            
            />  </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add1"
            android:src="@drawable/ic_add_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/done"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_add_new_photos"
            />
        <Button
            android:id="@+id/cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_cancel"
            android:onClick="cancel"
            />
        

    </LinearLayout>
</LinearLayout>

