<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.company.pppp.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/txt_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_txt_title"
            android:inputType="text"
            />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/txt_view_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_weight="5"
            android:id="@+id/edit_txt_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/txt_view_New"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5">
            <EditText
                android:id="@+id/edit_txt_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </ScrollView>
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textAlignment="center" />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="add"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/action1"
            android:gravity="center"
            /></LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/txt_view_attachment"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="25dp"
            android:layout_weight="5"
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/image1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/add1"
            android:src="@drawable/ic_add_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="done"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/done"
            android:onClick="done"/>
    </LinearLayout>
</LinearLayout>
